--- a/index.html
+++ b/index.html
@@ -72,8 +72,6 @@
 
     </table>
     <hr>
-    <h3>Orijinal Belgeler</h3>
-    <img src="belge1.jpg" alt="Orijinal Belge 1" width="300">
-    <img src="belge2.jpg" alt="Orijinal Belge 2" width="300">
-    <img src="belge3.jpg" alt="Orijinal Belge 3" width="300">
+    <h3>Belgeler</h3>
+    <img src="ihsancetin.com.tr/resimler/imm-sertifika.jpg" alt="Belge" width="300">
 </body>
