--- a/index.html
+++ b/index.html
@@ -73,5 +73,5 @@
     </table>
     <hr>
     <h3>Belgeler</h3>
-    <img src="ihsancetin.com.tr/resimler/imm-sertifika.jpg" alt="Belge" width="300">
+    <img src="https://ihsancetin.com.tr/resimler/imm-sertifika.jpg" alt="Belge" width="300">
 </body>
